After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672633 - Changing avatar does nothing
Changing avatar does nothing
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-22 15:16 UTC by Jonny Lamb
Modified: 2012-03-26 06:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
contact_widget_contact_update: change 'if else' block to a 'if' block inside the 'else' (1.85 KB, patch)
2012-03-23 10:59 UTC, Guillaume Desmottes
committed Details | Review
Update avatar chooser's account if EMPATHY_CONTACT_WIDGET_EDIT_ACCOUNT is not set (1.05 KB, patch)
2012-03-23 10:59 UTC, Guillaume Desmottes
committed Details | Review

Description Jonny Lamb 2012-03-22 15:16:29 UTC
I tried changing my avatar in the accounts dialog but nothing happened after I selected the new file. I looked at a dbus-monitor log and there wasn't any chat about avatars at all.
Comment 1 Guillaume Desmottes 2012-03-23 10:59:40 UTC
Created attachment 210401 [details] [review]
contact_widget_contact_update: change 'if else' block to a 'if' block inside the 'else'

No semantic change.
Comment 2 Guillaume Desmottes 2012-03-23 10:59:43 UTC
Created attachment 210402 [details] [review]
Update avatar chooser's account if EMPATHY_CONTACT_WIDGET_EDIT_ACCOUNT is not set

We can't rely on the account chooser to do it so we have to do it manually.
Comment 3 Guillaume Desmottes 2012-03-23 11:38:52 UTC
Reviewed by Xavier on IRC; asking for a code freeze exception.
Comment 4 Guillaume Desmottes 2012-03-26 06:45:17 UTC
Attachment 210401 [details] pushed as 1668f34 - contact_widget_contact_update: change 'if else' block to a 'if' block inside the 'else'
Attachment 210402 [details] pushed as fe6c5a5 - Update avatar chooser's account if EMPATHY_CONTACT_WIDGET_EDIT_ACCOUNT is not set