contact_widget_contact_update: change 'if else' block to a 'if' block inside the 'else'

No semantic change.

https://bugzilla.gnome.org/show_bug.cgi?id=672633